--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Overlayed | stream overlays that broadcasters can see 🎬🔴</title>
+    <link href="https://fonts.googleapis.com/css?family=Krub" rel="stylesheet">
+    <style>
+    body {
+      background-color: #000;
+      color: #FFF;
+    }
+    </style>
   </head>
   <body>
-    <img src="./images/header.png" alt="header" />
-    <p>Alpha project - coming soon.</p>
-    <p>For more information, see <a href="https://github.com/bengreenier/overlayed">overlayed on github</a>.</p>
+    <center>
+      <img src="./images/header.png" alt="header" />
+      <p>Alpha project - coming soon.</p>
+      <p>For more information, see <a href="https://github.com/bengreenier/overlayed">overlayed on github</a>.</p>
+    </center>
   </body>
 </html>
